--- a/TopicosAvanzados19A/public_html/VoltarMezquita/Proyecto/Contraseña.html
+++ b/TopicosAvanzados19A/public_html/VoltarMezquita/Proyecto/Contraseña.html
@@ -19,11 +19,10 @@
         <div class="formulario">
 
             <br><h2>Recuperar</h2>
-            <form action="#">
                 <p><input type="email" placeholder="Correo" required></p>
                 <p><input type="email" placeholder="Confirmar correo" required></p>
                 <input type="submit" value="Enviar">
-                <input type="submit" value="Regresar">
+                <button type="submit"><a href="Inicio.html">Regresar</a></button>
             </form>
         </div>
 
