--- a/TopicosAvanzados19A/public_html/VoltarMezquita/Proyecto/Registro.html
+++ b/TopicosAvanzados19A/public_html/VoltarMezquita/Proyecto/Registro.html
@@ -16,13 +16,12 @@
 <center>
 <div class="formulario">
     <br><h2>Nuevo usuario</h2>
-    <form action="#">
         <p><input type="text" placeholder="Usuario" required></p>
         <p><input type="email" placeholder="Correo Electronico" required></p>
         <p><input type="password" placeholder="Contraseña" required></p>
         <p><input type="password" placeholder="Confirmar contraseña" required></p>
         <input type="submit" value="Registrarse">
-        <input type="submit" value="Entrar">
+        <button type="submit"><a href="vista.html">Entrar</a></button>
     </form>
 </div>
 </center>
