--- a/TopicosAvanzados19A/public_html/VoltarMezquita/Proyecto/Inicio.html
+++ b/TopicosAvanzados19A/public_html/VoltarMezquita/Proyecto/Inicio.html
@@ -17,17 +17,15 @@
         </div>
 <center>
         <div class="formulario">
-
             <br><h2>Usuario</h2>
-            <form action="#">
                 <p><input type="text" placeholder="Usuario" required></p>
                 <p><input type="password" placeholder="Contraseña" required></p>
-                <input type="submit" value="Registrarse">
-                <input type="submit" value="Entrar">
+				<button type="submit"><a href="Registro.html">Registrarse</a></button>
+                <button type="submit"><a href="vista.html">Entrar</a></button>
             </form>
         </div>
         <div class="reset-password">
-            <br><a href="#">¿Has olvidado tu usuario o contraseña?</a>
+            <br><a href="Contraseña.html">¿Has olvidado tu usuario o contraseña?</a>
         </div>
 
       </center>
