--- a/TopicosAvanzados19A/public_html/VoltarMezquita/Proyecto/vista.html
+++ b/TopicosAvanzados19A/public_html/VoltarMezquita/Proyecto/vista.html
@@ -18,12 +18,11 @@
 <center>
         <div class="formulario">
 
-          <input type="submit" value="Cerrar sesion">
+        <button type="submit"><a href="Inicio.html">Cerrar sesión</a></button>
             <br><h2>Bienvenido</h2>
-            <form action="#">
-                <input type="submit" value="Compra">
-                <input type="submit" value="Inventario">
-                <input type="submit" value="Venta">
+			<button type="submit"><a href="Ordenar.html">Compra</a></button>
+			<button type="submit"><a href="Inventario.html">Inventario</a></button>
+            <button type="submit"><a href="Ventas.html">Venta</a></button>
             </form>
         </div>
 
