corrección de botones en el proyecto

--- a/TopicosAvanzados19A/public_html/VoltarMezquita/Proyecto/Contraseña.html
+++ b/TopicosAvanzados19A/public_html/VoltarMezquita/Proyecto/Contraseña.html
@@ -21,7 +21,7 @@
             <br><h2>Recuperar</h2>
                 <p><input type="email" placeholder="Correo" required></p>
                 <p><input type="email" placeholder="Confirmar correo" required></p>
-                <input type="submit" value="Enviar">
+                <button type="submit"><a href="Inicio.html">Enviar</a></button>
                 <button type="submit"><a href="Inicio.html">Regresar</a></button>
             </form>
         </div>
