--- a/TopicosAvanzados19A/public_html/VoltarMezquita/Proyecto/Registro.html
+++ b/TopicosAvanzados19A/public_html/VoltarMezquita/Proyecto/Registro.html
@@ -20,7 +20,7 @@
         <p><input type="email" placeholder="Correo Electronico" required></p>
         <p><input type="password" placeholder="Contraseña" required></p>
         <p><input type="password" placeholder="Confirmar contraseña" required></p>
-        <input type="submit" value="Registrarse">
+				<button type="submit"><a href="Inicio.html">Registrarse</a></button>
         <button type="submit"><a href="vista.html">Entrar</a></button>
     </form>
 </div>
