--- a/TopicosAvanzados19A/public_html/Ronal_Garcia/programa05.html
+++ b/TopicosAvanzados19A/public_html/Ronal_Garcia/programa05.html
@@ -2,7 +2,8 @@
 <!--
 Sours:          index.html
 Description:    Index del programa 5
-Date:           
+Date:           21/febrero/19
+autor:          Ronal Garcia
 -->
 <html lang="en" dir="ltr">
   <head>
