--- a/TopicosAvanzados19A/public_html/Ronal_Garcia/programa06.html
+++ b/TopicosAvanzados19A/public_html/Ronal_Garcia/programa06.html
@@ -2,9 +2,8 @@
 <!--
 Sours:          index.html
 Description:    Index del programa 6
-Date:           
-
-https://www.tutorialrepublic.com/codelab.php?topic=bootstrap&file=crud-data-table-for-database-with-modal-form
+Date:           21/febrero/19
+Autor: https://www.tutorialrepublic.com/codelab.php?topic=bootstrap&file=crud-data-table-for-database-with-modal-form
 -->
 
 <html lang="en">
