--- a/TopicosAvanzados19A/public_html/Ronal_Garcia/program01.html
+++ b/TopicosAvanzados19A/public_html/Ronal_Garcia/program01.html
@@ -2,7 +2,8 @@
 <!--
 Sours:          index.html
 Description:    Index del programa 1
-Date:          
+Date:           07/febrero/19
+autor:          Ronal Garcia
 -->
 <html>
     <head>   
