--- a/TopicosAvanzados19A/public_html/Ronal_Garcia/program02.html
+++ b/TopicosAvanzados19A/public_html/Ronal_Garcia/program02.html
@@ -2,7 +2,8 @@
 <!--
 Sours:          index.html
 Description:    Index del programa 2
-Date:           
+Date:           12/febrero/19
+autor:          Ronal Garcia
 -->
 <html>
     <head> 
