--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Proyecto_Topicos/index.html
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Proyecto_Topicos/index.html
@@ -45,6 +45,7 @@ información breve sobre la escuela, algunos eventos
 					<ul class="main_nav_list">
 						<li class="main_nav_item"><a href="nosotros.html">Acerca de nosotros</a></li>
 						<li class="main_nav_item"><a href="contact.html">Contactanos</a></li>
+						<li class="main_nav_item"><a href="estudiantes.html">Estudiantes</a></li>
 
 					</ul>
 				</div>
@@ -76,6 +77,7 @@ información breve sobre la escuela, algunos eventos
 				<ul class="menu_list menu_mm">
 					<li class="main_nav_item"><a href="nosotros.html">Acerca de nosotros</a></li>
 					<li class="main_nav_item"><a href="contact.html">Contactanos</a></li>
+					<li class="main_nav_item"><a href="estudiantes.html">Estudiantes</a></li>
 
 				</ul>
 
@@ -166,7 +168,7 @@ información breve sobre la escuela, algunos eventos
 						<img src="images/earth-globe.svg" alt="">
 					</div>
 
-					<a href="login.html"><h3>Kinder</h3></a>
+					<h3>Kinder</h3>
 					<p>In aliquam, augue a gravida rutrum, ante nisl fermentum nulla, vitae tempor nisl ligula vel nunc. Proin quis mi malesuada, finibus tortor fermentum.</p>
 				</div>
 
@@ -174,7 +176,7 @@ información breve sobre la escuela, algunos eventos
 					<div class="icon_container d-flex flex-column justify-content-end">
 						<img src="images/exam.svg" alt="">
 					</div>
-					<a href="login.html"><h3>Primaria</h3></a>
+					<h3>Primaria</h3>
 					<p>In aliquam, augue a gravida rutrum, ante nisl fermentum nulla, vitae tempor nisl ligula vel nunc. Proin quis mi malesuada, finibus tortor fermentum.</p>
 				</div>
 
@@ -182,7 +184,7 @@ información breve sobre la escuela, algunos eventos
 					<div class="icon_container d-flex flex-column justify-content-end">
 						<img src="images/books.svg" alt="">
 					</div>
-					<a href="login.html"><h3>Secundaria</h3></a>
+					<h3>Secundaria</h3>
 					<p>In aliquam, augue a gravida rutrum, ante nisl fermentum nulla, vitae tempor nisl ligula vel nunc. Proin quis mi malesuada, finibus tortor fermentum.</p>
 				</div>
 
@@ -191,7 +193,7 @@ información breve sobre la escuela, algunos eventos
 					<div class="icon_container d-flex flex-column justify-content-end">
 						<img src="images/professor.svg" alt="">
 					</div>
-					<a href="login.html"><h3>Preparatoria</h3></a>
+					<h3>Preparatoria</h3>
 					<p>In aliquam, augue a gravida rutrum, ante nisl fermentum nulla, vitae tempor nisl ligula vel nunc. Proin quis mi malesuada, finibus tortor fermentum.</p>
 				</div>
 
