--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Proyecto_Topicos/index.html
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Proyecto_Topicos/index.html
@@ -290,7 +290,7 @@ información breve sobre la escuela, algunos eventos
 			<div class="row">
 				<div class="col">
 					<div class="section_title text-center">
-						<h1>Proximos Eventos</h1>
+						<h1>Conoce nuestros eventos</h1>
 					</div>
 				</div>
 			</div>
@@ -304,8 +304,8 @@ información breve sobre la escuela, algunos eventos
 
 							<div class="col-lg-2 order-lg-1 order-2">
 								<div class="event_date d-flex flex-column align-items-center justify-content-center">
-									<div class="event_day">07</div>
-									<div class="event_month">Marzo</div>
+									<div class="event_day">00</div>
+									<div class="event_month">----</div>
 								</div>
 							</div>
 
@@ -334,8 +334,8 @@ información breve sobre la escuela, algunos eventos
 
 							<div class="col-lg-2 order-lg-1 order-2">
 								<div class="event_date d-flex flex-column align-items-center justify-content-center">
-									<div class="event_day">25</div>
-									<div class="event_month">Febrero</div>
+									<div class="event_day">00</div>
+									<div class="event_month">----</div>
 								</div>
 							</div>
 
@@ -364,8 +364,8 @@ información breve sobre la escuela, algunos eventos
 
 							<div class="col-lg-2 order-lg-1 order-2">
 								<div class="event_date d-flex flex-column align-items-center justify-content-center">
-									<div class="event_day">07</div>
-									<div class="event_month">Mayo</div>
+									<div class="event_day">00</div>
+									<div class="event_month">----</div>
 								</div>
 							</div>
 							<div class="col-lg-6 order-lg-2 order-3">
