cambio xd pagina

--- a/TopicosAvanzados19A/public_html/VoltarMezquita/Proyecto/Contraseña.html
+++ b/TopicosAvanzados19A/public_html/VoltarMezquita/Proyecto/Contraseña.html
@@ -20,7 +20,7 @@
 
             <br><h2>Recuperar</h2>
             <form action="#">
-                <p><input type="email" placeholder="Correo" required></p>
+                <p><input type="email" placeholder="Correo" required></p>       <!--ingresa su correo para que se le mande su usuario y contraseña-->
                 <p><input type="email" placeholder="Confirmar correo" required></p>
                 <input type="submit" value="Enviar">
                 <input type="submit" value="Regresar">
