--- a/TopicosAvanzados19A/public_html/VoltarMezquita/Proyecto/Inicio.html
+++ b/TopicosAvanzados19A/public_html/VoltarMezquita/Proyecto/Inicio.html
@@ -20,14 +20,14 @@
 
             <br><h2>Usuario</h2>
             <form action="#">
-                <p><input type="text" placeholder="Usuario" required></p>
+                <p><input type="text" placeholder="Usuario" required></p>     <!--ingresar datos del usuario-->
                 <p><input type="password" placeholder="Contraseña" required></p>
                 <input type="submit" value="Registrarse">
                 <input type="submit" value="Entrar">
             </form>
         </div>
         <div class="reset-password">
-            <br><a href="#">¿Has olvidado tu usuario o contraseña?</a>
+            <br><a href="#">¿Has olvidado tu usuario o contraseña?</a>      <!-- te manda a un apartado por -->
         </div>
 
       </center>
