--- a/TopicosAvanzados19A/public_html/VoltarMezquita/Proyecto/Registro.html
+++ b/TopicosAvanzados19A/public_html/VoltarMezquita/Proyecto/Registro.html
@@ -17,11 +17,11 @@
 <div class="formulario">
     <br><h2>Nuevo usuario</h2>
     <form action="#">
-        <p><input type="text" placeholder="Usuario" required></p>
+        <p><input type="text" placeholder="Usuario" required></p>     <!--ingresar los datos del usuario para su registro-->
         <p><input type="email" placeholder="Correo Electronico" required></p>
         <p><input type="password" placeholder="Contraseña" required></p>
         <p><input type="password" placeholder="Confirmar contraseña" required></p>
-        <input type="submit" value="Registrarse">
+        <input type="submit" value="Registrarse">     <!--botones para su registro-->
         <input type="submit" value="Entrar">
     </form>
 </div>
