--- a/TopicosAvanzados19A/public_html/VoltarMezquita/Proyecto/vista.html
+++ b/TopicosAvanzados19A/public_html/VoltarMezquita/Proyecto/vista.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Papeleria y tienda "Hanabi"</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>    <!--librerias-->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="CSS/estilos.css">
     <body style="background-color: #00D3BC;">
@@ -19,9 +19,9 @@
         <div class="formulario">
 
           <input type="submit" value="Cerrar sesion">
-            <br><h2>Bienvenido</h2>
-            <form action="#">
-                <input type="submit" value="Compra">
+            <br><h2>Bienvenido</h2>     <!-- titulo-->
+            <form action="">
+                <button type="submit" value="Compra"><a href="inicio.html">Compra</a></button>      <!--botones para ingresar a las otras opciones-->
                 <input type="submit" value="Inventario">
                 <input type="submit" value="Venta">
             </form>
