--- a/TopicosAvanzados19A/public_html/VoltarMezquita/Proyecto/Inventario.html
+++ b/TopicosAvanzados19A/public_html/VoltarMezquita/Proyecto/Inventario.html
@@ -510,6 +510,9 @@ $(document).ready(function(){
 				</form>
 			</div>
 		</div>
+
 	</div>
+  <button type="submit"><a href="vista.html">Regresar</a></button>
+
 </body>
 </html>
