--- a/TopicosAvanzados19A/public_html/VoltarMezquita/Proyecto/Ordenar.html
+++ b/TopicosAvanzados19A/public_html/VoltarMezquita/Proyecto/Ordenar.html
@@ -268,8 +268,8 @@ $(document).ready(function(){
 						<h2>Ordenar compra</h2>   <!--subtitulo de la pagina-->
 					</div>
 					<div class="col-sm-6">
-						<a href="#addEmployeeModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Enviar</span></a>   <!--botones de eliminar y agregar-->
-						<a href="#deleteEmployeeModal" class="btn btn-danger" data-toggle="modal"><i class="material-icons">&#xE15C;</i> <span>Cancelar</span></a>
+						<a href="vista.html" class="btn btn-success" ><i class="material-icons">&#xE147;</i> <span>Enviar</span></a>   <!--botones de eliminar y agregar-->
+						<a href="vista.html" class="btn btn-danger" ><i class="material-icons">&#xE15C;</i> <span>Cancelar</span></a>
 					</div>
                 </div>
             </div>
