--- a/TopicosAvanzados19A/public_html/VoltarMezquita/Proyecto/Registro.html
+++ b/TopicosAvanzados19A/public_html/VoltarMezquita/Proyecto/Registro.html
@@ -16,22 +16,15 @@
 <center>
 <div class="formulario">
     <br><h2>Nuevo usuario</h2>
-<<<<<<< HEAD
     <form action="#">
-        <p><input type="text" placeholder="Usuario" required></p>     <!--ingresar los datos del usuario para su registro-->
-        <p><input type="email" placeholder="Correo Electronico" required></p>
-        <p><input type="password" placeholder="Contraseña" required></p>
-        <p><input type="password" placeholder="Confirmar contraseña" required></p>
-        <input type="submit" value="Registrarse">     <!--botones para su registro-->
-        <input type="submit" value="Entrar">
-=======
+     <!--ingresar los datos del usuario para su registro-->
+    <!--botones para su registro-->
         <p><input type="text" placeholder="Usuario" required></p>
         <p><input type="email" placeholder="Correo Electronico" required></p>
         <p><input type="password" placeholder="Contraseña" required></p>
         <p><input type="password" placeholder="Confirmar contraseña" required></p>
 				<button type="submit"><a href="Inicio.html">Registrarse</a></button>
         <button type="submit"><a href="vista.html">Entrar</a></button>
->>>>>>> 58c56019dac17096fc8385d869c287a6c09a4ee5
     </form>
 </div>
 </center>
