--- a/TopicosAvanzados19A/public_html/VoltarMezquita/Proyecto/Inicio.html
+++ b/TopicosAvanzados19A/public_html/VoltarMezquita/Proyecto/Inicio.html
@@ -18,23 +18,16 @@
 <center>
         <div class="formulario">
             <br><h2>Usuario</h2>
-<<<<<<< HEAD
             <form action="#">
                 <p><input type="text" placeholder="Usuario" required></p>     <!--ingresar datos del usuario-->
-=======
-                <p><input type="text" placeholder="Usuario" required></p>
->>>>>>> 58c56019dac17096fc8385d869c287a6c09a4ee5
                 <p><input type="password" placeholder="Contraseña" required></p>
 				<button type="submit"><a href="Registro.html">Registrarse</a></button>
                 <button type="submit"><a href="vista.html">Entrar</a></button>
             </form>
         </div>
         <div class="reset-password">
-<<<<<<< HEAD
-            <br><a href="#">¿Has olvidado tu usuario o contraseña?</a>      <!-- te manda a un apartado por -->
-=======
+      <!-- te manda a un apartado por -->
             <br><a href="Contraseña.html">¿Has olvidado tu usuario o contraseña?</a>
->>>>>>> 58c56019dac17096fc8385d869c287a6c09a4ee5
         </div>
 
       </center>
