--- a/TopicosAvanzados19A/public_html/VoltarMezquita/Proyecto/vista.html
+++ b/TopicosAvanzados19A/public_html/VoltarMezquita/Proyecto/vista.html
@@ -18,20 +18,16 @@
 <center>
         <div class="formulario">
 
-<<<<<<< HEAD
-          <input type="submit" value="Cerrar sesion">
-            <br><h2>Bienvenido</h2>     <!-- titulo-->
+    <!-- titulo-->
             <form action="">
-                <button type="submit" value="Compra"><a href="inicio.html">Compra</a></button>      <!--botones para ingresar a las otras opciones-->
-                <input type="submit" value="Inventario">
-                <input type="submit" value="Venta">
-=======
+    <!--botones para ingresar a las otras opciones-->
+
+
         <button type="submit"><a href="Inicio.html">Cerrar sesión</a></button>
             <br><h2>Bienvenido</h2>
 			<button type="submit"><a href="Ordenar.html">Compra</a></button>
 			<button type="submit"><a href="Inventario.html">Inventario</a></button>
             <button type="submit"><a href="Ventas.html">Venta</a></button>
->>>>>>> 58c56019dac17096fc8385d869c287a6c09a4ee5
             </form>
         </div>
 
