--- a/TopicosAvanzados19A/public_html/JonathanEuan/MiPagina.html
+++ b/TopicosAvanzados19A/public_html/JonathanEuan/MiPagina.html
@@ -1,4 +1,4 @@
-<!-- Programa 01 
+<!-- Programa 01
 creacion de un html como introduccion a la primera unidad
 de Topicos avanzados de programacion-->
 <html>
@@ -9,6 +9,6 @@ de Topicos avanzados de programacion-->
   <script type='text/javascript'>alert("HolaMundo desde TYPE")</script> <!-- especificando-->
   <script type='text/javascript' src='codigoJS.js'></script> <!-- llamando archivo-->
 </head>
-HolaMundo1
+HolaMundo
 <body>
 </body>
