--- a/TopicosAvanzados19A/public_html/JonathanEuan/Programa03.html
+++ b/TopicosAvanzados19A/public_html/JonathanEuan/Programa03.html
@@ -26,7 +26,9 @@ Interfaces y Formularios
                 <!-- en esta parte creamos un label y una caja de texto, para que el usuario ingrese su nombre,
                 como extra se agrego un placeholder, que sirve como un ejemplo de lo que se puede ingresar en esa campo-->
               </div>
-  <!-- aqui creamos una lista "cosas", haciendo que el usuario pueda marcarlas para seleccioner lo que desee-->            
+  <!-- aqui creamos una lista "cosas", haciendo que el usuario pueda marcarlas para seleccioner
+  lo que desee. se hace el uso del "placeholder" para usar como una vista previa de lo que se
+  tiene que ingresar en ese campo.-->
             <input name="inputRadio1" id="inputRadio1" type="radio" value="1">Chocolates <br>
             <input name="inputRadio2" id="inputRadio2" type="radio" value="2">Paletas <br>
             <input name="inputRadio3" id="inputRadio3" type="radio" value="3">Pastel <br>
