--- a/TopicosAvanzados19A/public_html/JonathanEuan/Programa04/Index.html
+++ b/TopicosAvanzados19A/public_html/JonathanEuan/Programa04/Index.html
@@ -14,13 +14,14 @@
     </head>
     <body>
         <nav class="navbar navbar-inverse">
-  <!-- Los nav son para temas de los botone, algo asi como el diseño de estos-->
+  
             <div class="container-fluid">
                 <div class="nav-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse">
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
+      <!-- Es un contenedor en línea. Sirve para aplicar estilo al texto o agrupar elementos en línea. -->
                     </button>
                     <a class="navbar-brand" href="">Inicio</a>
                 </div>
