--- a/TopicosAvanzados19A/public_html/JonathanEuan/programa05.html
+++ b/TopicosAvanzados19A/public_html/JonathanEuan/programa05.html
@@ -8,7 +8,8 @@
     $(document).ready(function() {
       $('#tableExample').DataTable();
     });
-    /* este es un ejemplo para poder seleccionar -->
+    /* este es un ejemplo para poder de selectores, nos ayudan a seleccionar los diferentes elementos del DOM,
+    bien sea por su nombre, tipo, valores o propiedades de los atributos. */
       </script>
 
   </head>
@@ -80,3 +81,5 @@
           <th>Matricula</th>          <!-- celda 4 -->
         </tr>
       </tfoot>
+    </body>
+  </html>
