--- a/TopicosAvanzados19A/public_html/JonathanEuan/Programm02.html
+++ b/TopicosAvanzados19A/public_html/JonathanEuan/Programm02.html
@@ -12,6 +12,8 @@
             <form>
                 <input type="number" id="inputGrupo" min="1" max="100">
                 <button id="buttonGrupo" onclick="leerCalificaciones()">Agregar</button>
+    <!-- En este linea de codigo se crea un boton de nombre "agregar", en la que el usuario
+    ingresa el numero de alumnos -->
             </form>
         </div>
     </body>
