--- a/TopicosAvanzados19A/public_html/FrankMontalvo/U2/program07/program07.html
+++ b/TopicosAvanzados19A/public_html/FrankMontalvo/U2/program07/program07.html
@@ -20,8 +20,9 @@ Fecha:12/feb/2019
     <body>
         <div id="divGrupo">
             <form>
-                <input type="number" id="inputGrupo" min="1" max="100">
-                <button id="buttonGrupo" onclick="leerCalificaciones()">Agregar</button>
+                <button type="button" onclick="getCantidadAlumnos()">Click para insertar número de alumnos</button>
+                <button type="button" onclick="leerCalificaciones()">Leer calificaciones</button>
+                <button type="button" onclick="getPromedio()">Dame el promedio</button>
             </form>
         </div>
     </body>
