Ejercicio 1-parcial 2- "librerias " (7 de marzo)

--- a/TopicosAvanzados19A/public_html/Cosme_Magaña/Calificaciones.html
+++ b/TopicosAvanzados19A/public_html/Cosme_Magaña/Calificaciones.html
@@ -5,10 +5,14 @@
   <head>
     <meta charset="utf-8">
     <!--aqui llamamos al archivo de java script donde se pediran las calificaciones-->
-    <script type="text/javascript" src="Calificaciones.js"> </script>
+   <script type="text/javascript" src="Programa07.js"> </script>
     <title></title>
   </head>
   <body>
+    
+    <button onclick="cantidadalumnos();">Escribir cantidad alumnos</button>
+    <button onclick="leerCalificaciones();">Escribir calificaciones</button>
+    <button onclick="getpromedio();">Ver promedio</button>
 
   </body>
 </html>
