--- a/TopicosAvanzados19A/public_html/Pedro_Sánchez/Unidad 2/Programm 07/Index.html
+++ b/TopicosAvanzados19A/public_html/Pedro_Sánchez/Unidad 2/Programm 07/Index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<script src="/LeerCalificaciones.js" type="text/javascript"></script>
-	<meta charset="UTF-8">
-	<title>Calificaciones de Alumnos</title>
-</head>
-<body>
-	<center> <button onclick="getCantidadAlumnos();">Escribir Cantidad de Alumnos</button> <br> </center>
-	<center> <button onclick="LeerCalificaciones();">Escribir Calificaciones</button> <br> </center>
-	<center> <button onclick="getPromedio();">Obtener Promedio</button> <br> </center>
-</body>
+	<head>
+		<script src="LeerCalificaciones.js" type="text/javascript"></script>
+		<meta charset="UTF-8">
+		<title>Calificaciones de Alumnos</title>
+	</head>
+	<body>
+		<center> <button onclick="getCantidadAlumnos();">Escribir Cantidad de Alumnos</button> <br> </center>
+		<center> <button onclick="leerCalificaciones();">Escribir Calificaciones</button> <br> </center>
+		<center> <button onclick="getPromedio();">Obtener Promedio</button> <br> </center>
+	</body>
 </html>
