--- a/TopicosAvanzados19A/public_html/Pedro_Sánchez/Unidad 2/Programm 07/Index.html
+++ b/TopicosAvanzados19A/public_html/Pedro_Sánchez/Unidad 2/Programm 07/Index.html
@@ -1,3 +1,8 @@
+<!-- 
+*	Sourse: Index.html
+*	Description: Creamos dos botones para ingresar calificaciones de alumnos.
+*	Date: 07/03/2019
+-->
 <!DOCTYPE html>
 <html lang="en">
 	<head>
