Libreria para validar diferentes elementos

--- a/TopicosAvanzados19A/public_html/FrankMontalvo/U2/program07/program07.html
+++ b/TopicosAvanzados19A/public_html/FrankMontalvo/U2/program07/program07.html
@@ -20,7 +20,7 @@ Fecha:12/feb/2019
     <body>
         <div id="divGrupo">
             <form>
-                <button type="button" onclick="getCantidadAlumnos()">Click para insertar número de alumnos</button>
+                <button type="button" onclick="getEnteroPositivo()">Click para insertar número de alumnos</button>
                 <button type="button" onclick="leerCalificaciones()">Leer calificaciones</button>
                 <button type="button" onclick="getPromedio()">Dame el promedio</button>
             </form>
