--- a/TopicosAvanzados19A/public_html/FrankMontalvo/Pdf ejemplos/pdf.html
+++ b/TopicosAvanzados19A/public_html/FrankMontalvo/Pdf ejemplos/pdf.html
@@ -9,4 +9,5 @@
   <body>
     <button type="button" name="button" onclick="linea()">Generar pdf</button>
     <button type="button" name="button" onclick="image()">Generar pdf con imagen</button>
+      <button type="button" name="button" onclick="circulo()">Generar pdf con circulo</button>
 </html>
