--- a/TopicosAvanzados19A/public_html/JonathanEuan/Programa10/Charts.html
+++ b/TopicosAvanzados19A/public_html/JonathanEuan/Programa10/Charts.html
@@ -3,15 +3,60 @@
     <script type="text/javascript" src="jquery-1.12.0.min.js"></script>
     <script type="text/javascript" src="dist/Chart.bundle.min.js"></script>
     <script type="text/javascript">
-    $(document).ready(){ //funcion que determina que se va a mostrar cuando carge la pagina
+    $(document).ready(function(){ //funcion que determina que se va a mostrar cuando carge la pagina
       var datos={
         type: "pie",
-        datos:{
+        data:{
           datasets:[{
+            data:[
+            5,
+            10,
+            40,
+            12,
+            23,
+          ],
+          backgroundColor:[
+            "#f7464a",
+            "#46bfbd",
+            "#fdb45c",
+            "#949fb1",
+            "4d5360",
+          ],
+        }],
+        labels:[
+          "Dato1",
+          "Dato2",
+          "Dato3",
+          "Dato4",
+          "Dato5"
+        ]
+      },
+      option: {
+        responsive: true,
+      }
+    };
+    var canvas= document.getElementById('chart').getContext('2d');
+    window.pier=new Chart(canvas, datos);
 
-          }]
-        
-    }
+    setInterval(function (){
+      datos.data.datasets.splice(0);
+      var newData={
+        backgroundColor:{
+          "#f7464a",
+          "#46bfbd",
+          "#fdb45c",
+          "#949fb1",
+          "4d5360",
+        ],
+        data: [getRandom(),getRandom(),getRandom(),getRandom(),getRandom()]
+      };
+      datos.data.datasets.push(newData);
+      window.pie.update();
+    }, 5000);
+        }
+      }
+    })
+  });
     </script>
   </head>
   <body>
