--- a/TopicosAvanzados19A/public_html/JuanMezquita/Programa02.html
+++ b/TopicosAvanzados19A/public_html/JuanMezquita/Programa02.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <script type="text/javascript" src="Programa02.js">
-
+/* aqui se llama a un archivo js para poder ejecutarlo */
 
 </script>
 </head>
