--- a/TopicosAvanzados19A/public_html/JuanMezquita/Programa03.html
+++ b/TopicosAvanzados19A/public_html/JuanMezquita/Programa03.html
@@ -11,6 +11,7 @@
           <label class="control-label col-sm-2" for="inputUsername"></label>
           <input name="inputUsername" id="inputUsername" type="text" size="20" placeholder="Ejemplo: Donathelo"/>
 <br>
+/* en esta parte se colocan las selecciones con la opcion de marcar */
             <input  name="inputRadio1" id="inputRadio1" type="radio" value="1">Chocolates<br>
             <input  name="inputRadio2" id="inputRadio2" type="radio" value="2">Flores<br>
             <input  name="inputRadio3" id="inputRadio3" type="radio" value="3">Cartas<br>
