--- a/TopicosAvanzados19A/public_html/JuanMezquita/Programa9.html
+++ b/TopicosAvanzados19A/public_html/JuanMezquita/Programa9.html
@@ -19,9 +19,10 @@
 
 	$('#button').click(function() {
 
-		 var doc = new jsPDF();
+		var doc = new jsPDF();
 
 		var name = $('#name').val();
+    	var matt = $('#Matricula').val();
 
 		doc.setFontSize(15);
 
