--- a/TopicosAvanzados19A/public_html/JuanMezquita/Programa01.html
+++ b/TopicosAvanzados19A/public_html/JuanMezquita/Programa01.html
@@ -3,9 +3,9 @@
 <head>
   <title>PagJS</title>
 
-  <script>alert("HolaMundo desde SCript")</script> <!-- código directo -->
-  <script type='text/javascript'>alert("HolaMundo desde TYPE")</script> <!-- especificando-->
-  <script type='text/javascript' src='codigoJS.js'></script> <!-- llamando archivo-->
+  <script>alert("HolaMundo desde SCript")</script> <!-- código directo desde script -->
+  <script type='text/javascript'>alert("HolaMundo desde TYPE")</script> <!-- especificando el tipo de texto que estoy haciendo-->
+  <script type='text/javascript' src='codigoJS.js'></script> <!-- llamando un archivo para el alert-->
 </head>
 HolaMundo
 <body>
