arreglo del programa09

--- a/TopicosAvanzados19A/public_html/Karen_Lopéz/AngularJS/public_html/prueba5.html
+++ b/TopicosAvanzados19A/public_html/Karen_Lopéz/AngularJS/public_html/prueba5.html
@@ -21,17 +21,17 @@
         <script>
             angular.module('myApp', []).controller('namesCtrl', function ($scope) {
                 $scope.Nombres = [
-                    {nombre: 'Jani', edad: '2'},
-                    {nombre: 'Carl', edad: '35'},
-                    {nombre: 'Margareth', edad: '10'},
-                    {nombre: 'Hege', edad: '50'},
+                    {nombre: 'Diani', edad: '2'},
+                    {nombre: 'Wendy', edad: '35'},
+                    {nombre: 'Steven', edad: '10'},
+                    {nombre: 'Haru', edad: '50'},
                     {nombre: 'Joe', edad: '11'},
-                    {nombre: 'Gustav', edad: '20'},
-                    {nombre: 'Birgit', edad: '30'},
+                    {nombre: 'Ash', edad: '20'},
+                    {nombre: 'Elder', edad: '30'},
                     {nombre: 'Mary', edad: '8'},
                     {nombre: 'Kai', edad: '18'}
                 ];
-<!--orderBy: Ordena una matriz por una expresión. -->
+            //<!--orderBy: Ordena una matriz por una expresión. -->
                 $scope.orderByMe = function (x) {
                     $scope.myOrderBy = x;
                 }
