actualizacion de programas

--- a/TopicosAvanzados19A/public_html/VoltarMezquita/Programa7.html
+++ b/TopicosAvanzados19A/public_html/VoltarMezquita/Programa7.html
@@ -9,9 +9,9 @@
   </head>
   <body>
     <div id="divGrupo">
-      <button onclick="GetCantidadAlumnos();">Escribir cantidad de alumnos</button>
-      <button onclick="GetLeerCalidicaciones();">Escribir calificaciones</button>
-      <button onclick="GetObtenerPromedio();">Visualizar programas</button>
+      <button onclick="GetCantidadAlumnos();">Escribir cantidad de alumnos</button> <!--botones para ejecutar la funcion de l programa7.js -->
+      <button onclick="LeerCalidicaciones();">Escribir calificaciones</button>
+      <button onclick="OptenerPromedio();">Visualizar programas</button>
     </div>
   </body>
 </html>
