--- a/TopicosAvanzados19A/public_html/VoltarMezquita/Programa8.html
+++ b/TopicosAvanzados19A/public_html/VoltarMezquita/Programa8.html
@@ -2,18 +2,18 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <script type="text/javascript" src="programa7.js"> <!-- llama al programa 7-->
+    <script type="text/javascript" src="programa8.js"> <!-- llama al programa 8-->
 
     </script>
     <title></title>
   </head>
   <body>
     <div id="divGrupo">
-      <button onclick="GetRango();">Escribir el rango</button>
-      <button onclick="GetEntero();">Escribir el numero</button>
-      <button onclick="GetMAYUSCULAS();">nombre en mayusculas</button>
-      <button onclick="Getminusculas();">Nombre en minusculas</button>
-      <button onclick="GetFlotante();">escribir el numero</button>
+      <button onclick="Rango();">Escribir el rango</button>
+      <button onclick="MAYUSCULAS();">nombre en mayusculas</button>
+      <button onclick="minusculas();">Nombre en minusculas</button>
+      <button onclick="Entero();">Escribir el numero</button>
+      <button onclick="Flotante();">escribir el numero</button>
 
     </div>
   </body>
