--- a/TopicosAvanzados19A/public_html/RodrigoDiaz/Exposicion/ejemplo1.html
+++ b/TopicosAvanzados19A/public_html/RodrigoDiaz/Exposicion/ejemplo1.html
@@ -22,7 +22,7 @@
 						"#46BFBD",
 						"#FDB45C",
 						"#949FB1",
-						"#4D5360",
+						"#4D5360"
 					],
 				}],
 				labels : [
@@ -30,7 +30,7 @@
 					"Datos 2",
 					"Datos 3",
 					"Datos 4",
-					"Datos 5",
+					"Datos 5"
 				]
 			},
 			options : {
@@ -49,7 +49,7 @@
 					"#46BFBD",
 					"#FDB45C",
 					"#949FB1",
-					"#4D5360",
+					"#4D5360"
 				],
 				data : [getRandom(), getRandom(), getRandom(), getRandom(), getRandom()]
 			};
@@ -60,19 +60,15 @@
 
 		}, 5000);
 
-
-
 		function getRandom(){
 			return Math.round(Math.random() * 100);
 		}
-
 
 	});
 	</script>
 </head>
 <body>
 	<!--El <canvas>elemento HTML se utiliza para dibujar gráficos sobre la marcha, a través de JavaScript.-->
-
 	<div id="canvas-container" style="width:50%;">
 		<canvas id="chart" width="500" height="350"></canvas>
 	</div>
