--- a/TopicosAvanzados19A/public_html/FrankMontalvo/U2/Program08/Libreria.html
+++ b/TopicosAvanzados19A/public_html/FrankMontalvo/U2/Program08/Libreria.html
@@ -10,11 +10,47 @@
     <head>
       <h1>Validaciones</h1>
     </head>
+    <!--Div for Integer -->
     <div class="ENTERO">
+      <h2>Enteros</h2>
       <label for="Entero">Número Entero</label>
-      <input type="text" id="entero">
-      <button type="button" onclick="validarEntero()" name="button">Validar</button>
-      <input type="text" id="validacionentero" name="">
+      <input type="text" id="entero"><br>
+      <button type="button" onclick="validarEntero()" name="button">Validar</button><br>
+      <h4 id="validacionentero"></h4>
+    </div>
+    <!--Div for Float -->
+    <div class="FLOTANTE">
+      <h2>Flotante</h2>
+      <label for="Entero">Número flotante</label>
+      <input type="text" id="flotante"><br>
+      <button type="button" onclick="validarFlotante()" name="button">Validar</button><br>
+      <h4 id="validacionflotante"></h4>
+    </div>
+    <!--Div for UpperCase -->
+    <div class="MAYUSCULAS">
+      <h2>Mayúsculas</h2>
+      <label for="Entero">Letras Mayúsculas</label>
+      <input type="text" id="mayusculas"><br>
+      <button type="button" onclick="validarMayusculas()" name="button">Validar</button><br>
+      <h4 id="validacionmayus"></h4>
+    </div>
+    <!--Div for LowerCase -->
+    <div class="MINUSCULAS">
+      <h2>Minúsculas</h2>
+      <label for="Entero">Letras Minúsculas</label>
+      <input type="text" id="minusculas"><br>
+      <button type="button" onclick="validarMinusculas()" name="button">Validar</button><br>
+      <h4 id="validacionmin"></h4>
+    </div>
+    <!--Div for Range-->
+    <div class="Rango">
+      <h2>Rango</h2>
+      <label for="Entero">Valor</label>
+      <input type="text" id="Rango"><br>
+      <label for="Entero">Rangos</label>
+      <input type="text" id="Rango1"><input type="text" id="Rango2"><br>
+      <button type="button" onclick="validarRango()" name="button">Validar</button><br>
+      <h4 id="validacionrango"></h4>
     </div>
   </body>
 </html>
