--- a/TopicosAvanzados19A/public_html/Denilson_Osorio/Validacion/validacion.html
+++ b/TopicosAvanzados19A/public_html/Denilson_Osorio/Validacion/validacion.html
@@ -2,12 +2,14 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Validaciones</title>
+    <!-- Se crea el script externo -->
       <script type='text/javascript' src='validacion.js'></script>
   </head>
   <body>
     <div id="Validaciones">
         <form>
+          <!-- Se crean los botones que llaman a las funciones en el .js -->
             <button type="button" onclick="validacionEntero()">Ingrese un numero</button>
             <button type="button" onclick="validarFlotante()">Ingrese un valor</button>
             <button type="button" onclick="Minusculas()">Ingrese una letra minuscula</button>
