--- a/TopicosAvanzados19A/public_html/Cosme_Magaña/programa08.html
+++ b/TopicosAvanzados19A/public_html/Cosme_Magaña/programa08.html
@@ -7,5 +7,12 @@
   </head>
   <body>
 
+<!--se Agregan los botones que llamaran a los diferentes metodos de validacion -->
+
+  <button onclick="pedirnum('a');">Validar numero entero</button>
+<button onclick="pedirnum('b');">Validar numero float</button>
+<button onclick="pedirnum('c');">Validar Mayusculas</button>
+<button onclick="pedirnum('d');">Validar Minusculas</button>
+<button onclick="pedirnum('e');">Validar Rango</button>
   </body>
 </html>
