--- a/TopicosAvanzados19A/public_html/Pedro_Sánchez/Unidad 2/Programm 08/IndexValidaciones.html
+++ b/TopicosAvanzados19A/public_html/Pedro_Sánchez/Unidad 2/Programm 08/IndexValidaciones.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<script src="Libreria.js" type="text/javascript"></script>
+	<script src="Validaciones.js" type="text/javascript"></script>
 	<meta charset="UTF-8">
 	<title>Libreria Personalizada</title>
 </head>
@@ -11,14 +11,14 @@
 	<center><h3>Pedro Adrián Sánchez Cárdenas</h3></center>
 
 	<br>
-		<center><button onclick="pedir()">Ingresar Dato</button></center>
+		<center><button onclick="Pedir();">Ingresar Dato</button></center>
 	<br>
 
-	<center><button onclick="int()">Función de tipo Intero</button></center>
-	<center><button onclick="">Función de tipo Float</button></center>
-	<center><button onclick="">Función de tipo Minusculas</button></center>
-	<center><button onclick="">Función de tipo Mayusculas</button></center>
-	<center><button onclick="">Función de tipo Rango</button></center>
+	<center><button onclick="Entero();">Función de tipo Intero</button></center>
+	<center><button onclick="Floatante();">Función de tipo Float</button></center>
+	<center><button onclick="Mayusculas();">Función de tipo Minusculas</button></center>
+	<center><button onclick="Minusculas();">Función de tipo Mayusculas</button></center>
+	<center><button onclick="Rango();">Función de tipo Rango</button></center>
 	
 </body>
 </html>
