--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Unidad 2/Programa07.html
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Unidad 2/Programa07.html
@@ -13,7 +13,7 @@ Date:           12/Febrero/2019-->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <meta charset="utf-8">
-    <script type="text/javascript" src="Programa07JS.js"> </script> <!--Se llama al JS para que se ejecute en la pagina-->
+    <script type="text/javascript" src="program07.js"> </script> <!--Se llama al JS para que se ejecute en la pagina-->
     <title>
 
     </title>
