actualizacion de carpeta

--- a/TopicosAvanzados19A/public_html/JuanMezquita/Librerias_de_validacion/Programa08.html
+++ b/TopicosAvanzados19A/public_html/JuanMezquita/Librerias_de_validacion/Programa08.html
@@ -9,9 +9,12 @@
   </head>
 
   <body>
+
     <button onclick="getEnteros();">Escribir un entero</button>
     <button onclick="getFlotante();">Escribir un numero con decimales</button>
     <button onclick="Rango();">Escribir un numero entre 1 y 20</button>
-    <button onclick="minusculas();">Escribe una palabra</button>
+    <button onclick="validarMayusculas();">Escribe una palabra</button>
+    <button onclick="validarMinusculas();">Escribe una palabra</button>
+
   </body>
 </html>
