--- a/TopicosAvanzados19A/public_html/JonathanEuan/U2/Program14.html
+++ b/TopicosAvanzados19A/public_html/JonathanEuan/U2/Program14.html
@@ -1,34 +1,44 @@
 <html>
-<head>
-  <script src="Concurrent.Thread.Compile.js" type="text/javascript"></script>
-  <script type="text/javascript">
-            //  Concurrent.Thread.create(function(){
-            function caballo(numero, etiquetanombre,etiqueta,fin){
-                var i=0;
+  <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="Concurrent.Thread.Compile.js"></script>
+    <script  src="Programm14.js"></script>
+    <link rel="stylesheet" href="Programa14.css">
+  </head>
 
-                while(i<=fin){
-                  document.getElementById(etiqueta).value = numero+ " "+ i + "mts";
-                  i++;
-                }
-                  nombre=document.getElementById(etiquetanombre).value;
-                alert("Gano el caballo: " + numero + " - " + nombre);
-              }
-        function ejecutar(){
-              Concurrent.Thread.create(caballo,1,"inputCaballo1","input1",1000000);
-              Concurrent.Thread.create(caballo,2,"inputCaballo2","input2",1000000);
-              Concurrent.Thread.create(caballo,3,"inputCaballo3","input3",1000000);
-             //});
-           }
-          </script>
-  </script>
-</head>
-  <body>
-      <label>Nombre del caballo:</label>
-      <input type="text" id="inputCaballo1"/> Puntaje: <input type="text" id="input1" readonly/><br>
-      <label>Nombre del caballo:</label>
-      <input type="text" id="inputCaballo2"/> Puntaje: <input type="text" id="input2" readonly/><br>
-      <label>Nombre del caballo:</label>
-      <input type="text" id="inputCaballo3"/> Puntaje: <input type="text" id="input3" readonly/><br>
-      <button onclick="ejecutar();">Iniciar carrera</button>
+  <body style="background-color:#FF0000;">
+    <div class="titulo">
+
+      <h1>Hipodromo "Dwayne Pedro La Roca Johnson"</h1>
+    </div>
+
+    <div class="subtitulo">
+
+    </div>
+
+    <div class="nombreCaballos">
+      <h4>Ingrese el nombres de los caballos</h4>
+      <div class="col-xs-2"> <!-- tamaño del input -->
+        <input type="text" id="inputCaballo1" name="" value="" class="form-control" placeholder="Ingrese Nombre"><br>
+        <input type="text" id="inputCaballo2" name="" value="" class="form-control" placeholder="Ingrese Nombre"><br>
+        <input type="text" id="inputCaballo3" name="" value="" class="form-control" placeholder="Ingrese Nombre"><br>
+      </div>
+        <button class="btn btn-success"onclick="ejecutar();">Iniciar Carrera</button>
+    </div>
+
+<div class="separador"></div>
+
+<h4>Metros recorridos...</h4>
+<div class="metros">
+    <div class="col-xs-4">
+      <input type="text" id="metrosRecorridos1" class="form-control" name="" value=""><br>
+      <input type="text" id="metrosRecorridos2" class="form-control" name="" value=""><br>
+      <input type="text" id="metrosRecorridos3" class="form-control" name="" value=""><br>
+    </div>
+</div>
+
+    <img class="caballos" src="CarreraCaballos.gif">
+
   </body>
 </html>
