actualizacion de carpeta

--- a/TopicosAvanzados19A/public_html/Denilson_Osorio/Programa06.html
+++ b/TopicosAvanzados19A/public_html/Denilson_Osorio/Programa06.html
@@ -224,7 +224,7 @@ $(document).ready(function(){
 });
 </script>
 </head>
-<body background="11253228_848256938575763_8141838970849982173_n.jpg">
+<body style="background-color:CORAL;">
     <div class="container">
         <div class="table-wrapper">
             <div class="table-title">
