--- a/TopicosAvanzados19A/public_html/Denilson_Osorio/Login/index.html
+++ b/TopicosAvanzados19A/public_html/Denilson_Osorio/Login/index.html
@@ -65,6 +65,7 @@
             </div>
             <div class="subtitle"><h4>Bar Restaurant</h4></div>
 <button onclick="location.href='file:///C:/Users/denil/github/TopicosAvanzados19A/TopicosAvanzados19A/public_html/Denilson_Osorio/Sesion.html?#'">Administración</button>
+<button onclick="location.href='file:///C:/Users/denil/github/TopicosAvanzados19A/TopicosAvanzados19A/public_html/Denilson_Osorio/grafica.html?#'">TOP PLATILLOS</button>
         </div>
         <div class="bottom text-center">
             <a id="scrollDownArrow" href="#"><i class="fa fa-chevron-down"></i></a>
@@ -116,7 +117,7 @@
         <div class="container inner">
             <h2 class="section-title text-center">Menu</h2>
             <p class="lead main text-center">Contamos con un extenso menu</p>
-                        
+
                         <div class="row">
                 <div class="col-sm-3 col-md-3">
                     <div class="menu-images "><img src="img/menu/Ceviche.jpg" alt="Hot Drinks"></div>
@@ -281,7 +282,7 @@
         <section class="ss-style-bottom"></section>
     </div><!--/#food-menu-->
 
-
+<button>Comidas mas solicitadas</button>
 
 
 
