--- a/TopicosAvanzados19A/public_html/JonathanEuan/U2/Program14.html
+++ b/TopicosAvanzados19A/public_html/JonathanEuan/U2/Program14.html
@@ -2,6 +2,7 @@
   <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <!-- Librerias para darle vistas más esteticas a la página-->
     <script src="Concurrent.Thread.Compile.js"></script>
     <script  src="Programm14.js"></script>
     <link rel="stylesheet" href="Programa14.css">
