--- a/TopicosAvanzados19A/public_html/JonathanEuan/U2/Program07.html
+++ b/TopicosAvanzados19A/public_html/JonathanEuan/U2/Program07.html
@@ -3,23 +3,23 @@
 <!--Programa: Promedio de calificaciones
 Fecha:12/feb/2019
  -->
-<html>
-    <head>
-        <title> PROMEDIOS CALIFICACIONES </title>
+ <html>
+     <head>
+         <title> PROMEDIOS CALIFICACIONES </title>
 
-        <!--Se utiliza el script desde un archivo externo-->
-        <script type='text/javascript' src='Program07.js'></script>
+         <!--Se utiliza el script desde un archivo externo-->
+         <script src="Program07.js" type="text/javascript"></script>
 
-    </head>
-    <body>
-        <div id="divGrupo">
-            <form>
-                <button type="button" onclick="getEnteroPositivo()">Click para insertar número de alumnos</button>
-                <button type="button" onclick="leerCalificaciones()">Leer calificaciones</button>
-                <button type="button" onclick="getPromedio()">Dame el promedio</button>
-            </form>
-        </div>
-    </body>
+     </head>
+     <body>
+         <div id="divGrupo">
+             <form>
+                 <button type="button" onclick="getCantidadDeAlumnos()">Click para insertar número de alumnos</button>
+                 <button type="button" onclick="getLeerCalificaciones()">Leer calificaciones</button>
+                 <button type="button" onclick="getPromedio()">Dame el promedio</button>
+             </form>
+         </div>
+     </body>
 
 
-</html>
+ </html>
