--- a/TopicosAvanzados19A/public_html/FrankMontalvo/U2/Program08/Libreria.html
+++ b/TopicosAvanzados19A/public_html/FrankMontalvo/U2/Program08/Libreria.html
@@ -50,6 +50,7 @@
       <label for="Entero">Rangos</label>
       <input type="text" id="Rango1"><input type="text" id="Rango2"><br>
       <button type="button" onclick="validarRango()" name="button">Validar</button><br>
+      <h4 id="prueba"></h4>
       <h4 id="validacionrango"></h4>
     </div>
   </body>
