Comentarios de programas

--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Unidad 2/Programa08/Libreria.html
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Unidad 2/Programa08/Libreria.html
@@ -2,6 +2,9 @@
 Nombre: Jesus Alberto Lira Romero
 Profesor:Melquizedec Moo Medina
 Programa: LibreriasHTML
+Description: Implementacion de las lbrerias propias (LibreriaJS.js) creansdo
+              inputs para el ingreso de los datos, llamando a las funciones de
+              nuestra libreria y ejecutandose segun sea el caso.
 Fecha:10/mar/2019
 -->
 
