--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Unidad 2/Programa07/Programa07.html
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Unidad 2/Programa07/Programa07.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 
 <!--
-Sours:          Programa02.html
-Description:    Insertar Numero enteros y positivos
-Date:           12/Febrero/2019-->
+* Sourse: Programa07.html
+* Description: Creacion de botones para ingresar numero de alumnos, ingresar sus
+calificaciones y sacarles un promedio mediante funciones hechas en JS (program07.js).
+* Date: 07/03/2019
+* Autor: Jesus Lira Romero.
+-->
 
 <html lang="en" dir="ltr">
   <head>
@@ -19,8 +22,9 @@ Date:           12/Febrero/2019-->
     </title>
   </head>
   <body>
-      <button type="button" class="btn btn-primary" onclick="getCantidadDeAlumnos();">Escribir la cantidad de alumnos</button>
-      <button type="button" class="btn btn-danger" onclick="getLeerCalificaciones();">Escribir la calificacion del alumno</button>
+    <!-- Creacion de los botones ingresndo la funcion que se ejecutara de program07.js en onclick="nombredeFunction" -->
+      <button type="button" class="btn btn-primary" onclick="getCantidadAlumnos();">Escribir la cantidad de alumnos</button>
+      <button type="button" class="btn btn-danger" onclick="leerCalificaciones();">Escribir las calificaciones de los alumnos</button>
       <button type="button" class="btn btn-primary" onclick="getPromedio();">Promedio del alumno</button>
   </body>
 </html>
