--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Unidad 2/Programa13 (Ronald)/jquery/index.html
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Unidad 2/Programa13 (Ronald)/jquery/index.html
@@ -2,7 +2,7 @@
 <!--
 Nombre: Jesus Alberto Lira Romero
 Profesor: Melquizedec Moo Medina
-Programa: Programa09.html
+Programa: JQUERY
 Description: Ejemplo de exposicion.
             Ejemplo de uso de la libreria JQuery, empleandola en varios aperctos
               con diferentes funciones.
